--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "linoleum-docker",
   "version": "0.0.0",
   "description": "Environment for developing linoleum projects against docker.",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "bin": "./bin/linoleum-docker.sh",
   "author": "Kevin <kpdecker@gmail.com> (http://incaseofstairs.com/)",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "docker-hosts-watch": "^1.0.0"
+  }
 }
